--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,7 @@
 h1,h2,h3,h4,h5,h6 {
     font-family: Georgia, 'Times New Roman', Times, serif;
 }
+
 body {
     font-family: Arial, Helvetica, sans-serif;
     color: #777;
@@ -60,7 +61,7 @@ nav li a:hover {
 }
 main {
     width: 908px;  /* reduced to 908px to keep overall width at 960px */
-    margin: 40px auto 120px;
+    margin: 40px auto;
     background-color: white;
     padding: 25px;
     border: 1px solid #ddd;
@@ -184,6 +185,14 @@ footer {
     main {
         width: 85%;
         margin: 10px auto;
+    }
+
+    .bio-img {
+        width: 80%;
+        margin: auto;
+        display: block;
+        padding: 0;
+        float: initial;
     }
 
     .container {
