--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,8 +1,14 @@
 h1,h2,h3,h4,h5,h6 {
     font-family: Georgia, 'Times New Roman', Times, serif;
 }
-
+html {
+    height: 100%;
+}
 body {
+    min-height: 95%;
+    position: relative;
+    padding-bottom: 4rem;
+    margin: 0;
     font-family: Arial, Helvetica, sans-serif;
     color: #777;
     background-image: url(../images/bg.png);
@@ -75,15 +81,15 @@ main {
 }
 footer {
     background-color: #666;
-    width: 100%;
     text-align: center;
     font-size: 12px;
     color: white;
-    padding-top: 50px;
-    padding-bottom: 10px;
+    padding: 1rem;
     border-top: 8px solid #4aaaa5;
-    position: fixed;
-    bottom: 0px;
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    left: 0;
 }
 
 .bio-img {
@@ -133,7 +139,6 @@ footer {
 @media screen and (max-width: 980px) {
     header, footer {
         width: 100%;
-        position: initial;
     }
 
     .title {
@@ -198,9 +203,4 @@ footer {
     .container {
         margin: 0px 5px 5px 0px;
     }
-
-    footer {
-        position: initial;
-    }
-
 }
