--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -110,7 +110,7 @@ footer {
     cursor: pointer;
   }
 
-.container {
+  .container {
     position: relative;
     display: inline-block;
     margin: 25px 40px 25px 0px;
@@ -120,8 +120,7 @@ footer {
     left: 0px;
     bottom: 20px;
     background: #4aaaa5;
-    padding-top: 10px;
-    padding-bottom: 10px;
+    padding: 10px 0;
     width: 250px;
     text-align: center;
     color: white;
@@ -157,6 +156,10 @@ footer {
 
     .container {
         margin: 20px 0;
+        width: 40%;
+    }
+    .bottom-center, .portfolio-img {
+        width: 100%
     }
 
     .float-right {
@@ -166,8 +169,11 @@ footer {
 
 
 @media screen and (max-width: 768px) {
+    nav {
+        margin-right: 25px;
+    }
     main {
-        width: 75%;
+        width: 80%;
         margin-left: auto;
         margin-right: auto;
     }
@@ -194,13 +200,19 @@ footer {
 
     .bio-img {
         width: 80%;
+        height: 80%;
         margin: auto;
         display: block;
         padding: 0;
-        float: initial;
+        float: none;
     }
 
     .container {
         margin: 0px 5px 5px 0px;
+    }
+
+    .bottom-center {
+        font-size: .8rem;
+        padding: 2px 0;
     }
 }
