--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,9 +5,9 @@ html {
     height: 100%;
 }
 body {
-    min-height: 95%;
+    min-height: 100%;
     position: relative;
-    padding-bottom: 3rem;
+    padding-bottom: 6rem;
     margin: 0;
     font-family: Arial, Helvetica, sans-serif;
     color: #777;
@@ -135,7 +135,7 @@ footer {
   /* Media Queries - Use three @media screen tags, each with one of these max-widths: 980px, 768px and 640px. */
 
 @media screen and (max-width: 980px) {
-    header, footer {
+    header {
         width: 100%;
     }
 
@@ -198,8 +198,8 @@ footer {
     }
 
     .bio-img {
-        width: 80%;
-        height: 80%;
+        width: 70%;
+        height: 70%;
         margin: auto;
         display: block;
         padding: 0;
